--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,6 +12,12 @@
         android:layout_height="wrap_content"
         tools:text="Product Title" />
 
+    <EditText
+        android:id="@+id/price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="$0.00" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
