--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,24 +9,26 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Product Title"/>
+        tools:text="Product Title" />
 
     <TextView
-        tools:text="4"
         android:id="@+id/quantity"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        tools:text="4" />
 
     <TextView
-        tools:text="$ 4.99"
         android:id="@+id/item_price"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        tools:text="$ 4.99" />
 
     <Button
+        android:id="@+id/sale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="sale"
-        android:focusable="false"/>
+        android:backgroundTint="@color/colorAccent"
+        android:focusable="false"
+        android:text="sale" />
 
 </LinearLayout>
